# Ignite

./: Cargo.toml  LICENSE  README.md  build.rs  config.yaml
proto/: ignite.proto
src/: database.rs  main.rs
src/helpers/: config.rs
src/model/: config.rs
