[package]
name = "ignite"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
tonic = { version = "0.9.2", features = [ "tls", "gzip" ] }
tokio = { version = "1.32", features = [ "rt-multi-thread", "time", "fs", "macros", "net" ] }
serde = { version = "1", features = ["derive"] }

neo4rs = "0.6"

tract-onnx = "0.20.7"
prost = "0.11"
prost-types = "0.11"
anyhow = "1"
serde_yaml = "0.9"
async-trait = "0.1"

[build-dependencies]
tonic-build = { version = "0.9.2", features = [ "prost" ] }